added docu
Issue #179